# todoListplusplus

./: .env.example  Cargo.toml  Dockerfile
.sqlx/: query-20f931c9fff685f29832ac6a250210db354ffc8461fa85074c9230014902ab45.json  query-267ac7d23dedefd41b5ad9fa18443fba049dba856e0fd698dffaed493d321a3e.json  query-2ced70ac62fd7b567adcedacb74ffbb1291adc8fe9064580708a907a97213dad.json  query-32302d3b41e841ad0b98f67c1d14a57fcdd320dab7bf51193510f130e6b04b24.json  query-371e35877df76f22b2bc8847eaeafa7141639335b38334bb6ab7edabb360fc45.json  query-3d225ee3fabdc983bcaf90234c901f889c191f3aa39e0f9539dabac7510721ae.json  query-4692be1df84dbd18ad79acfec1c230e1b0c43bd70f106b8cc3b992d12c4997f2.json  query-46e87ad9194c484514f42f7a936e15dac3999db972885af0952175ba0e40d06c.json  query-508530332c41c2d67d465c6b7833a8d9f0d32ed73e1d8b5d521f550578ce5495.json  query-547e36c4f3b6a422d997924b95437ac8f8dd43a6bccd060f3fe9212d09d1b7d7.json  query-833ba9331b2529d516990310b45a104a162312b21f58f4d0a9214cf93de705de.json  query-9ad825f80221e3ad7de130b8d6533d9c1bab082d9ca5dcbb42c5fcba88609753.json  query-a68766718b626870bdfa0d79d0f5aa8108295501153506dc638d1fe558a22a8e.json  query-bc125600ea08d66feb94ae32a4bd483e947921a9bf592ddaa27acbd29b053cf5.json  query-c5bbd9ce0435d23b5b7aba5d0bc0fee191d2e4bcf8f03e3cb3dd679cfc36078d.json  query-c7d371990356e45941b4adc0899fdac46981fe1f04df57f5d11dcf66ac24c5d9.json  query-ca4cc2090d4b469cd8f858157ecbf2d623f2d0ae7aa66302ff28fbf66b1cd42e.json  query-dbee9fb1c2f2580f4dd0155df012b49a9bd6c143032645f92737ba849b235d58.json  (+2 more)
migrations/: 20251207144752_initial.down.sql  (+5 more)
src/: app.rs  (+2 more)
(+56 files in other folders)
