[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
bcrypt = "0.17.1"
chrono = { version = "0.4", features = ["serde"] }
deadpool-redis = "0.22.0"
dotenvy = "0.15"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
redis = "0.32.7"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate", "json", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }